Small warnings eliminated

https://bugzilla.gnome.org/show_bug.cgi?id=653155